[tool.poetry]
name = "minecraft-prometheus-exporter"
version = "0.1.0"
description = ""
authors = ["Brandon Tupou <jabavhutt@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
prometheus-client = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
