[tool.poetry]
name = "minecraft-prometheus-exporter"
version = "0.1.0"
description = ""
authors = ["Brandon Tupou <btupou@protonmail.com>"]


[tool.poetry.dependencies]
python = "^3.10"
prometheus-client = "^0.21.0"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
